--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "webpack serve -c config/webpack.dev.config.js",
     "build": "webpack build -c config/webpack.prod.config.js",
     "build:dev": "webpack build -c config/webpack.dev.config.js",
-    "lint": "eslint src",
+    "lint": "eslint ./src --max-warnings 0",
+    "lint:fix": "eslint --fix src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
