--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:dev": "webpack build -c config/webpack.development.config.js",
     "lint": "eslint ./src --max-warnings 0",
     "lint:fix": "eslint --fix src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
   },
   "keywords": [
     "react",
@@ -36,6 +37,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unicorn": "^55.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "mini-css-extract-plugin": "^2.9.1",
     "prettier": "^3.3.3",
