--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start:dev": "webpack serve -c config/webpack.development.config.js",
     "build": "webpack build -c config/webpack.production.config.js",
     "build:dev": "webpack build -c config/webpack.development.config.js",
-    "lint": "eslint ./src --max-warnings 0",
+    "lint": "eslint --ext .js,.jsx --max-warnings 0 ./src",
     "lint:fix": "eslint --fix src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test:ct": "cypress run --component --browser chrome",
+    "test:open": "cypress open"
   },
   "keywords": [
     "react",
@@ -20,6 +22,7 @@
   "author": "romanbuchuk",
   "license": "ISC",
   "dependencies": {
+    "cypress": "^13.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -27,10 +30,14 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
+    "@cypress/code-coverage": "^3.13.2",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
     "babel-loader": "^9.2.1",
+    "babel-plugin-istanbul": "^7.0.0",
     "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^4.6.2",
