Added components & hooks

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack build -c config/webpack.production.config.js",
     "build:dev": "webpack build -c config/webpack.development.config.js",
     "lint": "eslint --ext .js,.jsx --max-warnings 0 ./src",
-    "lint:fix": "eslint --fix src",
+    "lint:fix": "eslint --fix --ext .js,.jsx src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
     "test:ct": "cypress run --component --browser chrome",
@@ -23,8 +23,10 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^13.15.0",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
