--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
     "test:ct": "cypress run --component --browser chrome",
-    "test:open": "cypress open"
+    "test:open": "cypress open",
+    "check1": "echo \"App has been started\"",
+    "check2": "npm run check1 && npm test"
   },
   "keywords": [
     "react",
@@ -26,6 +28,7 @@
     "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
@@ -40,6 +43,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-webpack": "^0.13.9",
     "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-react": "^7.37.0",
